# cosmology.compat.camb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  README.rst  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_tests.yml  release.yml
docs/: conf.py  index.rst
src/cosmology/compat/camb/: __init__.py  _core.py  _standard.py  constants.py  core.py
tests/: __init__.py
tests/camb/: __init__.py  conftest.py  test_api.py  test_components.py  test_constants.py  test_core.py  test_distances.py  test_extras.py  test_namespace.py  test_pkg.py  test_standard.py  test_wrapper.py
