[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "cosmology.compat.camb"
description = "Cosmology API compatibility layer for CAMB"
dynamic = [
  "version"
]
readme = "README.rst"
requires-python = ">=3.9"
authors = [
  {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
  {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
maintainers = [
  {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
  {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "camb",
  "numpy>=2"
]
license.text = "MIT"

[project.optional-dependencies]
test = [
  "cosmology.api",
  "pytest",
  "pytest-cov"
]

[project.urls]
Documentation = "https://cosmology.readthedocs.io/projects/camb"
Repository = "https://github.com/cosmology-api/cosmology.compat.camb"

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  # and branches that don't pertain to this version of Python
  "pragma: no cover",
  "pragma: py{ignore_python_version}",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run
  "if __name__ == .__main__.:",
  # Don't complain about abstract methods, they aren't run:
  '@(abc\.)?abstractmethod',
  # Exclude type check blocks and Protocol contents, they aren't run:
  "if TYPE_CHECKING:",
  '\.\.\.',
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_"
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch]
build.targets.sdist.only-include = ["src/cosmology"]
build.targets.wheel.packages = ["src/cosmology"]
version.source = "vcs"

[tool.mypy]
python_version = 3.9
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
strict = true
disallow_subclassing_any = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
exclude = '''(^|/)tests/|(^/)docs/|(^/)conftest\.py'''

[[tool.mypy.overrides]]
module = "tests/*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "camb.*",
  "cosmology.api.*",
  "numpy.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "ARG001",
  "ARG002",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "N802",
  "FBT003",
  "PD",
  "RET505",
  "RET506",
  "RET507",
  "RUF022"
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN", "D", "S101"]
