[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "cosmology.compat.camb"
description = "Cosmology API compatibility layer for CAMB"
dynamic = [
  "version"
]
readme = "README.rst"
requires-python = ">=3.10"
authors = [
  {name = "Nathaniel Starkman", email = "starkman@mit.edu"},
  {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
maintainers = [
  {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
  {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "numpy>=2"
]
license.text = "BSD-3-Clause"

[project.optional-dependencies]
doc = [
  "sphinx",
  "furo"
]
test = [
  "astropy",
  "camb",
  "cosmology.api",
  "pytest",
  "pytest-cov"
]

[project.urls]
Documentation = "https://cosmology.readthedocs.io/projects/camb"
Repository = "https://github.com/cosmology-api/cosmology.compat.camb"

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch]
build.targets.sdist.only-include = ["src/cosmology"]
build.targets.wheel.packages = ["src/cosmology"]
version.source = "vcs"

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
strict = true
disallow_subclassing_any = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
exclude = '''(^|/)tests/|(^/)docs/|(^/)conftest\.py'''

[[tool.mypy.overrides]]
module = "tests/*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "camb.*",
  "cosmology.api.*",
  "numpy.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "ARG001",
  "ARG002",
  "COM812",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "N802",
  "FBT003",
  "PD",
  "RET505",
  "RET506",
  "RET507",
  "RUF022"
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN", "D", "S101"]
"docs/*" = ["ALL"]
